Web Inspector: take into account the whole security origin instead of just host https://bugs.webkit.org/show_bug.cgi?id=92740

Patch by Alexei Filippov <alexeif@chromium.org> on 2012-07-31
Reviewed by Pavel Feldman.

Source/WebCore:

Make the DOM Storage Agent take into account all the
information relevant to the security origin, i.e. protocol, host, and
port. Previously only the host was taken into account. That caused
inspector to show the first storage only in the case a page operated
over several security origins sharing the same host (but having
different protocols e.g. http and https).

* inspector/InspectorDOMStorageAgent.cpp:
(WebCore::InspectorDOMStorageAgent::storageId):
(WebCore::InspectorDOMStorageAgent::didUseDOMStorage):
* inspector/InspectorDOMStorageResource.cpp:
(WebCore::InspectorDOMStorageResource::isSameOriginAndType):
(WebCore::InspectorDOMStorageResource::bind):
* inspector/InspectorDOMStorageResource.h:
(InspectorDOMStorageResource):

LayoutTests:

* http/tests/inspector-enabled/dom-storage-open-expected.txt:

Canonical link: https://commits.webkit.org/110576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124201 268f45cc-cd09-0410-ab3c-d52691b4dbfc