Source/WebCore/inspector/InspectorDOMStorageAgent.cpp
@@ -157,12 +157,7 @@ String InspectorDOMStorageAgent::storageId(Storage* storage)
     Frame* frame = storage->frame();
     ExceptionCode ec = 0;
     bool isLocalStorage = (frame->domWindow()->localStorage(ec) == storage && !ec);
-    DOMStorageResourcesMap::iterator domStorageEnd = m_resources.end();
-    for (DOMStorageResourcesMap::iterator it = m_resources.begin(); it != domStorageEnd; ++it) {
-        if (it->second->isSameHostAndType(frame->document()->securityOrigin(), isLocalStorage))
-            return it->first;
-    }
-    return String();
+    return storageId(frame->document()->securityOrigin(), isLocalStorage);
 }
 
 String InspectorDOMStorageAgent::storageId(SecurityOrigin* securityOrigin, bool isLocalStorage)
@@ -170,7 +165,7 @@ String InspectorDOMStorageAgent::storageId(SecurityOrigin* securityOrigin, bool 
     ASSERT(securityOrigin);
     DOMStorageResourcesMap::iterator domStorageEnd = m_resources.end();
     for (DOMStorageResourcesMap::iterator it = m_resources.begin(); it != domStorageEnd; ++it) {
-        if (it->second->isSameHostAndType(securityOrigin, isLocalStorage))
+        if (it->second->isSameOriginAndType(securityOrigin, isLocalStorage))
             return it->first;
     }
     return String();
@@ -188,7 +183,7 @@ void InspectorDOMStorageAgent::didUseDOMStorage(StorageArea* storageArea, bool i
 {
     DOMStorageResourcesMap::iterator domStorageEnd = m_resources.end();
     for (DOMStorageResourcesMap::iterator it = m_resources.begin(); it != domStorageEnd; ++it) {
-        if (it->second->isSameHostAndType(frame->document()->securityOrigin(), isLocalStorage))
+        if (it->second->isSameOriginAndType(frame->document()->securityOrigin(), isLocalStorage))
             return;
     }
 
