Source/WebCore/inspector/InspectorDOMStorageResource.h
@@ -53,7 +53,7 @@ public:
     void bind(InspectorFrontend*);
     void unbind();
 
-    bool isSameHostAndType(SecurityOrigin*, bool isLocalStorage) const;
+    bool isSameOriginAndType(SecurityOrigin*, bool isLocalStorage) const;
     String id() const { return m_id; }
     StorageArea* storageArea() const { return m_storageArea.get(); }
     Frame* frame() const { return m_frame.get(); }
